# Django-Learning-System

./: .env.dist  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
core/: settings.py  urls.py
lessons/: admin.py  models.py  serializers.py  urls.py  views.py
products/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
users/: admin.py  models.py  paginators.py  serializers.py
